[workspace]
members = [
    "clacks_agentd",
    "clacks_crypto",
    "clacks_demos",
    "clacks_mtproto",
    "clacks_rpc",
    "clacks_tl_codegen",
    "clacks_transport",
    "kabuki",
    "kabuki_extras",
    "keyring-rs",
    "rust-delegate",
    "rust-security-framework/security-framework-sys",
    "rust-security-framework/security-framework",
]
