[workspace]
members = [
    "actix",
    "clacks_agentd",
    "clacks_crypto",
    "clacks_mtproto",
    "clacks_rpc",
    "clacks_tl_codegen",
    "clacks_transport",
    "keyring-rs",
    "rust-delegate",
    "rust-security-framework/security-framework-sys",
    "rust-security-framework/security-framework",
]
