[package]
name = "async_bus"
version = "2.0.0"

description = "A lock-free, bounded, single-producer, multi-consumer, broadcast channel."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/bus"
homepage = "https://github.com/jonhoo/bus"
repository = "https://github.com/jonhoo/bus.git"

keywords = ["channel","broadcast","lock-free"]
categories = ["asynchronous", "concurrency"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/bus" }

[features]
bench = []

[dependencies]
atomic-option = "0.1"
futures = "0.1.21"
num_cpus = "1.8.0"
void = "1.0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]
proptest = "0.8.1"
tokio = "0.1.7"
