[package]
name = "clacks-crypto"
version = "0.0.2"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "*"
error-chain = "*"
openssl = "*"
rand = "*"

[dependencies.clacks-mtproto]
path = "../clacks-mtproto"
version = "0.0.2"
