[package]
name = "clacks-demos"
version = "0.0.2"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "*"
chrono = "*"
error-chain = "*"
futures = "0.1"
futures-await = "*"
rand = "*"
tokio = "*"
tokio-io = "*"

[dependencies.clacks-mtproto]
path = "../clacks-mtproto"
version = "0.0.2"
features = ["rustfmt-codegen"]

[dependencies.clacks-crypto]
path = "../clacks-crypto"
version = "0.0.2"

[dependencies.clacks-transport]
path = "../clacks-transport"
version = "0.0.2"
