[package]
name = "clacks-demos"
version = "0.0.3"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "*"
chrono = "*"
error-chain = "*"
futures = "0.1"
futures-await = "*"
rand = "*"
serde = "1.0"
serde_json = "*"
tokio = "*"
tokio-io = "*"

[dependencies.clacks-mtproto]
path = "../clacks-mtproto"
version = "0.0.3"

[dependencies.clacks-crypto]
path = "../clacks-crypto"
version = "0.0.3"

[dependencies.clacks-transport]
path = "../clacks-transport"
version = "0.0.3"

[dependencies.sexpr]
git = "https://github.com/zshipko/sexpr"
