[package]
name = "clacks-transport"
version = "0.0.2"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "*"
bytes = "*"
tokio-io = "*"

[dependencies.clacks-mtproto]
path = "../clacks-mtproto"
version = "0.0.2"
features = ["rustfmt-codegen"]
