[package]
name = "clacks-transport"
version = "0.0.3"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "1.2"
bytes = "0.4"
chrono = "0.4"
error-chain = "0.11"
rand = "0.4"
tokio-io = "0.1"

[dependencies.clacks-mtproto]
path = "../clacks-mtproto"
version = "0.0.3"

[dependencies.clacks-crypto]
path = "../clacks-crypto"
version = "0.0.3"
