[package]
name = "clacks_agentd"
version = "0.0.1"
authors = ["Aaron Gallagher <_@habnab.it>"]

[dependencies]
actix = "*"
byteorder = "*"
bytes = "*"
chrono = "*"
delegate = "*"
failure = "0.1.1"
futures = "0.1"
futures-await = "*"
futures-cpupool = "*"
lazy_static = "1.0"
rand = "0.4"
serde = "1.0"
serde_derive = "*"
serde_json = "*"
slog = "*"
slog-async = "*"
slog-envlogger = "*"
slog-scope = "*"
slog-term = "*"
tokio = "*"
tokio-io = "*"
tokio-uds = "*"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.73.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[dependencies.clacks_transport]
path = "../clacks_transport"
version = "0.0.5"

[dependencies.clacks_rpc]
path = "../clacks_rpc"
version = "0.0.5"

[dependencies.keyring]
path = "../keyring-rs"
version = "*"

[dependencies.sexpr]
git = "https://github.com/zshipko/sexpr"
