[package]
name = "clacks_agentd"
version = "0.0.1"
authors = ["Aaron Gallagher <_@habnab.it>"]

[dependencies]
byteorder = "1.2.3"
bytes = "0.4.8"
chrono = "0.4.3"
delegate = "0.1.3"
failure = "0.1.1"
futures = "0.1.21"
futures-await = "0.1.0"
futures-cpupool = "0.1.8"
lazy_static = "1.0.1"
rand = "0.4.2"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.21"
slog = "2.2.3"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-scope = "4.0.1"
slog-term = "2.4.0"
tokio = "0.1.7"
tokio-codec = "0.1.0"
tokio-io = "0.1.7"
tokio-uds = "0.2.0"

[dependencies.actix]
path = "../actix"
version = "0.6.1"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.73.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[dependencies.clacks_transport]
path = "../clacks_transport"
version = "0.0.5"

[dependencies.clacks_rpc]
path = "../clacks_rpc"
version = "0.0.5"

[dependencies.jsonrpc-core]
path = "../jsonrpc/core"
version = "*"

[dependencies.jsonrpc-macros]
path = "../jsonrpc/macros"
version = "*"

[dependencies.keyring]
path = "../keyring-rs"
version = "0.4.0"
