[package]
name = "clacks_crypto"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "crypto-related functionality for telegram/mtproto"

[dependencies]
byteorder = "1.2"
error-chain = "0.11"
openssl = "0.10"
rand = "0.4"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.73.0"
