[package]
name = "clacks_demos"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "*"
chrono = "*"
error-chain = "*"
futures = "0.1"
futures-await = "*"
rand = "*"
serde = "1.0"
serde_json = "*"
tokio = "*"
tokio-io = "*"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.73.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[dependencies.clacks_transport]
path = "../clacks_transport"
version = "0.0.5"

[dependencies.sexpr]
git = "https://github.com/zshipko/sexpr"
