[package]
name = "clacks_mtproto"
version = "0.0.3"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "minimal wrappers for telegram's mtproto serialization"

[dependencies]
byteorder = "1.2"
erased-serde = "0.3"
error-chain = "0.11"
extfmt = "0.1"
lazy_static = "1.0"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies.clacks_tl_codegen]
path = "../clacks_tl_codegen"
version = "0.0.3"
