[package]
name = "clacks_rpc"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "telegram's TCP transport encoding"

[dependencies]
byteorder = "1.2"
chrono = "0.4"
failure = "0.1.1"
futures = "0.1"
futures-cpupool = "*"
slog = "*"
tokio-codec = "*"
tokio-io = "*"

[dependencies.actix]
path = "../actix"
version = "0.6.1"

[dependencies.futures-await]
version = "*"
optional = true

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.73.0"

[dependencies.clacks_transport]
path = "../clacks_transport"
version = "0.0.5"

[features]
default = ["kex"]
kex = ["futures-await"]
