[package]
name = "clacks_tl_codegen"
version = "0.0.3"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "codegen for clacks"

[dependencies]
derivative = "1.0"
pom = "1"
syn = "0.13"
quote = "0.5"

[dependencies.rustfmt]
version = "0.10"
optional = true

[features]
default = ["rustfmt-codegen"]
rustfmt-codegen = ["rustfmt"]
