[package]
name = "clacks_tl_codegen"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "codegen for clacks"

[dependencies]
proc-macro2 = "0.4.6"
pom = "1.1.0"
syn = "0.14.2"
quote = "0.6.3"

[dependencies.rustfmt]
version = "0.10"
optional = true

[features]
default = []
rustfmt-codegen = ["rustfmt"]
