[package]
name = "clacks_transport"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "telegram's TCP transport encoding"

[dependencies]
byteorder = "1.2"
bytes = "0.4"
chrono = "0.4"
either = "*"
failure = "0.1.1"
rand = "0.4"
slog = "*"
tokio-codec = "*"

serde_json = "*"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.73.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"
